--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "expo": "~52.0.18",
     "expo-status-bar": "~2.0.0",
+    "firebase": "^10.3.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
