--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
     "@react-navigation/stack": "^6.4.1",
     "dayjs": "^1.11.13",
     "expo": "~52.0.18",
+    "expo-cli": "^6.3.10",
+    "expo-image-picker": "~16.0.3",
+    "expo-location": "~18.0.4",
     "expo-status-bar": "~2.0.0",
     "firebase": "^10.14.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gifted-chat": "^2.6.4",
+    "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-image-picker": "~16.0.3",
-    "expo-location": "~18.0.4",
-    "react-native-maps": "1.18.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
