--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.4.1",
     "dayjs": "^1.11.13",
     "expo": "~52.0.18",
+    "expo-av": "~15.0.1",
     "expo-cli": "^6.3.10",
     "expo-image-picker": "~16.0.3",
     "expo-location": "~18.0.4",
@@ -29,7 +30,9 @@
     "react-native-maps": "1.18.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "uuid": "^11.0.4",
+    "expo-media-library": "~17.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
